--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -31,5 +31,5 @@ jobs:
       run: npm install -g surge
       
     - name: run surge
-      run: surge ./build http://bootcamp2020_sept.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ http://bootcamp2020_sept.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
 
